--- a/Forms.html
+++ b/Forms.html
@@ -11,6 +11,11 @@
     Nome:
     <input type="text"/>
 </label>
+<br>
+<label>
+    Email:
+    <input type="text"/>
+</label>
     </form>
 
 </body>
