--- a/Forms.html
+++ b/Forms.html
@@ -16,7 +16,12 @@
     Email:
     <input type="text"/>
 </label>
-    </form>
+<br>
+<label>
+    Senha:
+    <input type="password"/>
+</label>
+</form>
 
 </body>
 </html>
